--- a/index.html
+++ b/index.html
@@ -38,19 +38,12 @@
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    sed porttitor velit. Fusce hendrerit et enim in gravida.
-                    Nunc varius dignissim orci, sed euismod risus porta at. Nunc
-                    consequat tortor metus, non finibus eros blandit ac. Duis
-                    felis risus, maximus id congue et, tincidunt eget urna.
-                    Pellentesque sem risus, congue interdum diam et, eleifend
-                    blandit nisl. Pellentesque habitant morbi tristique senectus
-                    et netus et malesuada fames ac turpis egestas.
                 </p>
             </div>
         </section>
         <section>
             <div class="container">
-                <h1>Subscribe To Our Newslett</h1>
+                <h1>Subscribe To Our Newsletter</h1>
                 <form>
                     <input type="email" placeholder="Enter email..." />
                     <button type="submit" class="button_1">Subscribe</button>
@@ -65,14 +58,6 @@
                     <h3>HTML5 Markup</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam sed porttitor velit. Fusce hendrerit et enim in
-                        gravida. Nunc varius dignissim orci, sed euismod risus
-                        porta at. Nunc consequat tortor metus, non finibus eros
-                        blandit ac. Duis felis risus, maximus id congue et,
-                        tincidunt eget urna. Pellentesque sem risus, congue
-                        interdum diam et, eleifend blandit nisl. Pellentesque
-                        habitant morbi tristique senectus et netus et malesuada
-                        fames ac turpis egestas.
                     </p>
                 </div>
                 <div class="box">
@@ -80,13 +65,6 @@
                     <h3>CSS3 Styling</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam sed porttitor velit. Fusce hendrerit et enim in
-                        gravida. Nunc varius dignissim orci, sed euismod risus
-                        porta at. Nunc consequat tortor metus, non finibus eros
-                        blandit ac. Duis felis risus, maximus id congue et,
-                        tincidunt eget urna. Pellentesque sem risus, congue
-                        interdum diam et, eleifend blandit nisl. Pellentesque
-                        habitant morbi tristique senectus et netus et malesuada
                         fames ac turpis egestas.
                     </p>
                 </div>
