--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE htmlblack
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
@@ -34,7 +33,7 @@
         </header>
         <section id="showcase">
             <div class="container">
-                <h1>Afforable Professional Web Design</h1>
+                <h1>Lorem ipsum!</h1>
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
@@ -73,14 +72,6 @@
                     <h3>Graphic Design</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nam sed porttitor velit. Fusce hendrerit et enim in
-                        gravida. Nunc varius dignissim orci, sed euismod risus
-                        porta at. Nunc consequat tortor metus, non finibus eros
-                        blandit ac. Duis felis risus, maximus id congue et,
-                        tincidunt eget urna. Pellentesque sem risus, congue
-                        interdum diam et, eleifend blandit nisl. Pellentesque
-                        habitant morbi tristique senectus et netus et malesuada
-                        fames ac turpis egestas.
                     </p>
                 </div>
             </div>
